FEAT-RESERVATION-BY-STATUS